--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toye Sobayo — Main</title>
-    <!-- Add your CSS file link here -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,16 +16,14 @@
             
             <p> Glad to have you on my site! I'm a Computer Science major and Philosophy Minor at Rutgers University New Brunswick.  </p>
 
-            <p> I am currently a software engineer intern at <a href="https://www.okta.com/"> Okta </a> on the Apex engineering 
-                team working on Enterprise Applications such as AWS and Salesforce. 
-                I am also a Founding Engineer at <a href="https://pipelines.lol/"> 
-                Pipelines </a> where we streamline the process of searching for career "pipelines". </p>
+            <p> Currently, I am an incoming software engineer intern at <a href="https://www.litify.com/"> Litify </a> on the Enterprise Legal Management team starting Winter 2025. </p>
 
-            <p> Previously, I ran my own part time business at <a href="https://www.instagram.com/kicksfrom.toye/"> kicksfrom.toye</a> where I resold sneakers and clothing. </p>
+            <p> Previously, I was a software engineer intern at <a href="https://www.okta.com/"> Okta </a> where I was on the Enterprise engineering
+                team working on Enterprise Applications such as Heroku and Salesforce. I am also a Founding Engineer at <a href="https://pipelines.lol/"> 
+                Pipelines </a> where we streamline the process of searching for career "pipelines". Lastly, I ran my own part time business at <a href="https://www.instagram.com/kicksfrom.toye/"> 
+                kicksfrom.toye</a> where I resold sneakers and clothing. </p>
 
-            <p> I mainly focus on software engineering, particularly backend but mostly fullstack. 
-                You can view my projects here on my <a href="https://shine-mandevilla-056.notion.site/0551f076972f4b05ae78a34342e08bf4?pvs=4">resume </a> 
-            </p>
+            <p> I mainly focus on software engineering, mostly backend and fullstack. You can view my projects here on my <a href="https://shine-mandevilla-056.notion.site/0551f076972f4b05ae78a34342e08bf4?pvs=4"> resume </a> </p>
         </div>
         <hr>
         <div class="contact-me">
@@ -44,7 +41,7 @@
     <script>
         document.getElementById('discord-link').addEventListener('click', function(event) {
             event.preventDefault();
-            const discordTag = 'Toye.py'; // Replace with your actual Discord tag
+            const discordTag = 'Toye.py'; 
             navigator.clipboard.writeText(discordTag).then(function() {
               alert('Discord tag copied to clipboard: ' + discordTag +', Redirecting to Discord');
               window.location.href = 'https://discord.com/channels/@me'
