Just some updates

--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
      <div class="header">
         <h1> Hey! I'm Toye Sobayo </h1>
         <hr>
-        <h2> About Me! </h2>
+        <h2> About Me </h2>
         <div class="content">
             
-            <p> Glad to have you on my site! I'm a Computer Science major and Philosophy Minor at Rutgers University New Brunswick.  </p>
+            <p> Glad to have you on my site! I'm a Computer Science major at Rutgers University New Brunswick.  </p>
 
-            <p> Currently, I am an incoming software engineer intern at <a href="https://www.litify.com/"> Litify </a> on the Enterprise Legal Management team starting Winter 2025. </p>
+            <p> Currently, I am a Software Engineer Intern at <a href="https://www.litify.com/"> Litify </a> on the Matters & Intake Team`. </p>
 
             <p> Previously, I was a software engineer intern at <a href="https://www.okta.com/"> Okta </a> where I was on the Enterprise engineering
                 team working on Enterprise Applications such as Heroku and Salesforce. I am also a Founding Engineer at <a href="https://pipelines.lol/"> 
                 Pipelines </a> where we streamline the process of searching for career "pipelines". Lastly, I ran my own part time business at <a href="https://www.instagram.com/kicksfrom.toye/"> 
                 kicksfrom.toye</a> where I resold sneakers and clothing. </p>
 
-            <p> I mainly focus on software engineering, mostly backend and fullstack. You can view my projects here on my <a href="https://shine-mandevilla-056.notion.site/0551f076972f4b05ae78a34342e08bf4?pvs=4"> resume </a> </p>
+            <p> I mainly focus on software engineering, particularly backend and fullstack. You can view my work a bit more in-depth here on my <a href="https://shine-mandevilla-056.notion.site/0551f076972f4b05ae78a34342e08bf4?pvs=4"> resume </a> </p>
         </div>
         <hr>
         <div class="contact-me">
@@ -43,7 +43,7 @@
             event.preventDefault();
             const discordTag = 'Toye.py'; 
             navigator.clipboard.writeText(discordTag).then(function() {
-              alert('Discord tag copied to clipboard: ' + discordTag +', Redirecting to Discord');
+              alert('Copy paste my tag: ' + discordTag +', in your search bar. Redirecting to Discord');
               window.location.href = 'https://discord.com/channels/@me'
             }, function(err) {
               console.error('Could not copy text: ', err);
