removed a small typo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             
             <p> Glad to have you on my site! I'm a Computer Science major at Rutgers University New Brunswick.  </p>
 
-            <p> Currently, I am a Software Engineer Intern at <a href="https://www.litify.com/"> Litify </a> on the Matters & Intake Team`. </p>
+            <p> Currently, I am a Software Engineer Intern at <a href="https://www.litify.com/"> Litify </a> on the Matters & Intake Team. </p>
 
             <p> Previously, I was a software engineer intern at <a href="https://www.okta.com/"> Okta </a> where I was on the Enterprise engineering
                 team working on Enterprise Applications such as Heroku and Salesforce. I am also a Founding Engineer at <a href="https://pipelines.lol/"> 
